# percona-qa

./: .editorconfig  5.6_regression_baseline.txt  56_cross_upgrade.sh  57_cross_upgrade.sh  ASAN_bugs_info.txt  CNAME  Contributors  HOWTO_merge_upstream.txt  MOVED  MyRocks.sql  MyRocks_TokuDB.sql  PQUERY-HOWTO  README  README.md  TokuDB.sql  TokuMXse_bug_report.sh  adding_asserts.txt  alldiffs.sh  analyze_subdir_cores.sh  ansible_info.txt  backtrace-all.gdb  basedir-create-bundle.sh  bats2junit.sh  bug_report.sh  bughunt_template.cfg  build_5.7_debug.sh  build_5.7_opt.sh  build_5.7_valgrind.sh  build_5.x_debug.sh  build_5.x_debug_for_audit_plugin.sh  build_5.x_debug_rocks.sh  build_5.x_opt.sh  build_5.x_opt_rocks.sh  build_5.x_valgrid.sh  build_mariadb_debug.sh  build_mdpsms_dbg.sh  build_mdpsms_dbg_asan.sh  build_mdpsms_dbg_galera.sh  build_mdpsms_dbg_san.sh  build_mdpsms_dbg_valgrind.sh  (+296 more)
BUGS/: ASAN_MDEV-22737.sql  FIXED_MDEV-20984.sql  FIXED_MDEV-21804.sql  FIXED_MDEV-21983.sql  FIXED_MDEV-21983_10.5.2_dbg  FIXED_MDEV-22115.sql  FIXED_MDEV-22258.sql  FIXED_MDEV-22318.sql  FIXED_MDEV-22337.sql  FIXED_MDEV-22391.sql  FIXED_MDEV-22451.sql  FIXED_MDEV-22498.sql  FIXED_MDEV-22501.sql  FIXED_MDEV-22715.sql  FIXED_MDEV-22941.sql  MDEV-11783.sql  MDEV-14642.sql  MDEV-15178.sql  MDEV-15494.sql  MDEV-15703.sql  MDEV-16686.sql  MDEV-16788.sql  MDEV-16808.sql  MDEV-16985.sql  MDEV-17223.sql  MDEV-17225.sql  MDEV-17556.sql  MDEV-17729.sql  MDEV-17749.sql  MDEV-17782.sql  MDEV-18163.sql  MDEV-18216.sql  MDEV-18496.sql  MDEV-18780.sql  (+268 more)
postgresql/pytest/: Dockerfile  build_from_source.sh  conftest.py  docker-compose.yml  pyproject.toml  run_major_upgrade_workflow.sh  run_minor_upgrade_workflow.sh  run_tde_upgrade_parallel.sh  run_tests.sh  setup_test_env.sh
postgresql/pytest/config/: kmip_profiles.example.env  openbao.example.env
postgresql/pytest/coverage_reports/: baseline_2026-05-11.md  coverage_2026-05-12.md  coverage_2026-05-13.md  coverage_2026-05-14.md  coverage_2026-05-19-external-key-providers.md  coverage_2026-05-19.md  pg_tde_rewind_fix_2026-05-12.md  test_catalog_2026-05-14.md
postgresql/pytest/docker/: README.md  entrypoint.sh
postgresql/pytest/docs/: ci_upgrade_scenarios.md  fortanix_kmip_setup.md  io_uring_system_setup.md  key_provider_matrix.md  kmip.md  kmip_advanced.md  kmip_revalidation.md  kmip_test_coverage.md  kmip_testing_strategy.md  major_upgrade.md  minor_upgrade.md  test_sections.md  upgrade_matrix.md  vault.md  vault_kmip.md
postgresql/pytest/docs/kmip/: README.md  advanced-scenarios.md  ci-strategy.md  quickstart.md  test-catalog.md  vault-kmip-engine.md  vendor-lab-fortanix.md  vendor-signoff.md
postgresql/pytest/lib/: __init__.py  backup.py  cluster.py  cosmian_kms.py  file_keyring_common_matrix.py  kmip.py  kmip_common_matrix.py  kmip_profiles.py  kmip_revalidation.py  replication.py  tde.py  test_sections.py  vault.py  vault_cli.py  vault_kmip.py  vault_kv_common_matrix.py  vault_kv_profiles.py
postgresql/pytest/scripts/: check_io_uring_ready.sh  export_vault_kmip_certs_for_pytest.sh  hashicorp_vault_common.sh  hashicorp_vault_env.sh  install_cosmian_kms.sh  install_openbao.sh  kmip_env.sh  openbao_env.sh  run_hashicorp_vault_pytest.sh  run_hashicorp_vault_revalidation.sh  run_key_provider_matrix.sh  run_kmip_matrix.sh  run_kmip_revalidation.sh  run_openbao_revalidation.sh  run_vault_kmip_revalidation.sh  run_vault_kv_matrix.sh  setup_cosmian_for_pytest.sh  setup_cosmian_local_for_pytest.sh  setup_kmip_for_pytest.sh  setup_openbao_for_pytest.sh  setup_vault_for_pytest.sh  setup_vault_kmip_for_pytest.sh
postgresql/pytest/scripts/config/: hashicorp_vault.example.env
postgresql/pytest/scripts/scenarios/: hashicorp_vault_kmip.sh  hashicorp_vault_kv_v2.sh
postgresql/pytest/tests/: conftest.py  test_backup_recovery.py  test_bug_reproduction.py  test_change_key_provider.py  test_cipher.py  test_encryption.py  test_external_key_provider_regressions.py  test_file_keyring_common_matrix.py  test_kmip.py  test_kmip_advanced.py  test_kmip_common_matrix.py  test_kmip_server_revalidation.py  test_openbao_bash_parity.py  test_partitioning.py  test_pdg_migration.py  test_pg_basebackup.py  test_pgbackrest.py  test_pitr.py  test_recovery.py  test_replication.py  test_smgr_cipher_reuse.py  test_tde_cli_tools.py  test_tde_minor_upgrade.py  test_tde_pg_upgrade.py  test_tde_rewind_advanced.py  test_template_databases.py  test_unlogged_recovery.py  test_upgrade.py  test_vault_hashicorp_parity.py  test_vault_kmip.py  test_vault_kv_common_matrix.py  test_vault_providers.py  test_waldump.py
(+11620 files in other folders)
